Avanzaod Ejercicio CCAA

--- a/02. Desarrollo de Interfaces/VSCode/ejerccaa/comunidadesAutonomas.html
+++ b/02. Desarrollo de Interfaces/VSCode/ejerccaa/comunidadesAutonomas.html
@@ -9,7 +9,7 @@
     <div id="marco">
         <fieldset>
             <legend id="comunidad"></legend>
-            <p><select id="provincias"></select></p>
+            <p id="marcoProvincias"></p>
         </fieldset>
     </div>
     <script type="module" src="principal.js"></script>
