Terminado Ejercicio Provincias JS

--- a/02. Desarrollo de Interfaces/VSCode/ejerccaa/comunidadesAutonomas.html
+++ b/02. Desarrollo de Interfaces/VSCode/ejerccaa/comunidadesAutonomas.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comunidades autónomas</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <div id="marco">
-        <fieldset>
-            <legend id="comunidad"></legend>
-            <p id="marcoProvincias"></p>
-        </fieldset>
-    </div>
+    <p id="marcoProvincias"></p>
+    <br>
+    <fieldset id="marcoccaa">
+        <legend id="leyenda"></legend><select id="ccaa"></select>
+    </fieldset>
     <script type="module" src="principal.js"></script>
 </body>
 </html>
